lex.output
Non-terminaux inutiles dans la grammaire

    programme
    liste_blocs
    liste_id_dec
    listeID
    bracket


Règles inutiles dans la grammaire

   66 programme: liste_blocs

   67 liste_blocs: bloc
   68            | bloc liste_blocs

   69 liste_id_dec: tINT tID tCOMMA liste_id_dec

   70 listeID: tID
   71        | tID listeID

   72 initialisation_variable: tINT liste_id_dec tASSIGN liste_math_operations tSEMI

   73 bracket: tLBRACE
   74        | tRBRACE


Règles inutiles dans l'analyseur à cause de conflits

   24 liste_math_operations: math_operation


État 30 conflits: 1 décalage/réduction
État 48 conflits: 4 décalage/réduction, 13 réduction/réduction
État 114 conflits: 4 décalage/réduction


Grammaire

    0 $accept: declaration_fonctions $end

    1 operand: tNB
    2        | math_operation
    3        | tID

    4 logical_operator: tLT
    5                 | tGT
    6                 | tNE
    7                 | tEQ
    8                 | tGE
    9                 | tLE
   10                 | tAND
   11                 | tOR

   12 logical_operation: liste_math_operations logical_operator liste_math_operations
   13                  | tNOT logical_operation

   14 liste_logical_operations: logical_operation
   15                         | logical_operation liste_logical_operations

   16 math_operator: tADD
   17              | tSUB
   18              | tMUL
   19              | tDIV

   20 $@1: %empty

   21 math_operation: operand math_operator $@1 operand
   22               | appel_fonction

   23 liste_math_operations: operand
   24                      | math_operation
   25                      | math_operation math_operator liste_math_operations

   26 my_return: tRETURN liste_math_operations tSEMI

   27 my_if: tIF tLPAR liste_logical_operations tRPAR bloc
   28      | my_if tELSE bloc

   29 my_while: tWHILE tLPAR liste_logical_operations tRPAR bloc

   30 print: tPRINT tLPAR liste_math_operations tRPAR tSEMI

   31 liste_id_aff: tID
   32             | tID tCOMMA liste_id_aff

   33 declaration_variable: tINT tID tSEMI

   34 initialisation_variable: tINT tID tASSIGN liste_math_operations tSEMI

   35 affectation_variable: liste_id_aff tASSIGN liste_math_operations tSEMI

   36 declaration_fonctions: declaration_fonction
   37                      | declaration_fonction declaration_fonctions

   38 $@2: %empty

   39 $@3: %empty

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc
   41                     | tVOID tID tLPAR liste_parametres_declaration tRPAR bloc

   42 appel_fonction: tID tLPAR liste_parametres_appel tRPAR

   43 appel_fonction_void: tID tLPAR liste_parametres_appel tRPAR tSEMI

   44 instruction: declaration_variable
   45            | affectation_variable
   46            | initialisation_variable
   47            | declaration_fonction
   48            | appel_fonction_void
   49            | my_if
   50            | my_while
   51            | print
   52            | my_return

   53 liste_instructions: instruction
   54                   | instruction liste_instructions

   55 bloc: instruction
   56     | tLBRACE liste_instructions tRBRACE

   57 parametre_declaration: tINT tID
   58                      | tVOID

   59 liste_parametres_declaration: parametre_declaration
   60                             | parametre_declaration tCOMMA liste_parametres_declaration

   61 parametre_appel: tINT operand
   62                | operand
   63                | tVOID

   64 liste_parametres_appel: parametre_appel
   65                       | parametre_appel tCOMMA liste_parametres_appel


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tIF (258) 27
    tELSE (259) 28
    tWHILE (260) 29
    tPRINT (261) 30
    tRETURN (262) 26
    tINT (263) 33 34 40 57 61
    tVOID (264) 41 58 63
    tADD (265) 16
    tSUB (266) 17
    tMUL (267) 18
    tDIV (268) 19
    tLT (269) 4
    tGT (270) 5
    tNE (271) 6
    tEQ (272) 7
    tGE (273) 8
    tLE (274) 9
    tASSIGN (275) 34 35
    tAND (276) 10
    tOR (277) 11
    tNOT (278) 13
    tLBRACE (279) 56
    tRBRACE (280) 56
    tLPAR (281) 27 29 30 40 41 42 43
    tRPAR (282) 27 29 30 40 41 42 43
    tSEMI (283) 26 30 33 34 35 43
    tCOMMA (284) 32 60 65
    tNB (285) 1
    tID <s> (286) 3 31 32 33 34 40 41 42 43 57


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    operand (33)
        à gauche: 1 2 3
        à droite: 21 23 61 62
    logical_operator (34)
        à gauche: 4 5 6 7 8 9 10 11
        à droite: 12
    logical_operation (35)
        à gauche: 12 13
        à droite: 13 14 15
    liste_logical_operations (36)
        à gauche: 14 15
        à droite: 15 27 29
    math_operator (37)
        à gauche: 16 17 18 19
        à droite: 21 25
    math_operation (38)
        à gauche: 21 22
        à droite: 2 24 25
    $@1 (39)
        à gauche: 20
        à droite: 21
    liste_math_operations (40)
        à gauche: 23 24 25
        à droite: 12 25 26 30 34 35
    my_return (41)
        à gauche: 26
        à droite: 52
    my_if (42)
        à gauche: 27 28
        à droite: 28 49
    my_while (43)
        à gauche: 29
        à droite: 50
    print (44)
        à gauche: 30
        à droite: 51
    liste_id_aff (45)
        à gauche: 31 32
        à droite: 32 35
    declaration_variable (46)
        à gauche: 33
        à droite: 44
    initialisation_variable (47)
        à gauche: 34
        à droite: 46
    affectation_variable (48)
        à gauche: 35
        à droite: 45
    declaration_fonctions (49)
        à gauche: 36 37
        à droite: 0 37
    declaration_fonction (50)
        à gauche: 40 41
        à droite: 36 37 47
    $@2 (51)
        à gauche: 38
        à droite: 40
    $@3 (52)
        à gauche: 39
        à droite: 40
    appel_fonction (53)
        à gauche: 42
        à droite: 22
    appel_fonction_void (54)
        à gauche: 43
        à droite: 48
    instruction (55)
        à gauche: 44 45 46 47 48 49 50 51 52
        à droite: 53 54 55
    liste_instructions (56)
        à gauche: 53 54
        à droite: 54 56
    bloc (57)
        à gauche: 55 56
        à droite: 27 28 29 40 41
    parametre_declaration (58)
        à gauche: 57 58
        à droite: 59 60
    liste_parametres_declaration (59)
        à gauche: 59 60
        à droite: 40 41 60
    parametre_appel (60)
        à gauche: 61 62 63
        à droite: 64 65
    liste_parametres_appel (61)
        à gauche: 64 65
        à droite: 42 43 65


État 0

    0 $accept: . declaration_fonctions $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    declaration_fonctions  aller à l'état 3
    declaration_fonction   aller à l'état 4


État 1

   40 declaration_fonction: tINT . tID tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc

    tID  décalage et aller à l'état 5


État 2

   41 declaration_fonction: tVOID . tID tLPAR liste_parametres_declaration tRPAR bloc

    tID  décalage et aller à l'état 6


État 3

    0 $accept: declaration_fonctions . $end

    $end  décalage et aller à l'état 7


État 4

   36 declaration_fonctions: declaration_fonction .
   37                      | declaration_fonction . declaration_fonctions

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 36 (declaration_fonctions)

    declaration_fonctions  aller à l'état 8
    declaration_fonction   aller à l'état 4


État 5

   40 declaration_fonction: tINT tID . tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc

    tLPAR  décalage et aller à l'état 9


État 6

   41 declaration_fonction: tVOID tID . tLPAR liste_parametres_declaration tRPAR bloc

    tLPAR  décalage et aller à l'état 10


État 7

    0 $accept: declaration_fonctions $end .

    $défaut  accepter


État 8

   37 declaration_fonctions: declaration_fonction declaration_fonctions .

    $défaut  réduction par utilisation de la règle 37 (declaration_fonctions)


État 9

   40 declaration_fonction: tINT tID tLPAR . liste_parametres_declaration $@2 tRPAR $@3 bloc

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    parametre_declaration         aller à l'état 13
    liste_parametres_declaration  aller à l'état 14


État 10

   41 declaration_fonction: tVOID tID tLPAR . liste_parametres_declaration tRPAR bloc

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    parametre_declaration         aller à l'état 13
    liste_parametres_declaration  aller à l'état 15


État 11

   57 parametre_declaration: tINT . tID

    tID  décalage et aller à l'état 16


État 12

   58 parametre_declaration: tVOID .

    $défaut  réduction par utilisation de la règle 58 (parametre_declaration)


État 13

   59 liste_parametres_declaration: parametre_declaration .
   60                             | parametre_declaration . tCOMMA liste_parametres_declaration

    tCOMMA  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 59 (liste_parametres_declaration)


État 14

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration . $@2 tRPAR $@3 bloc

    $défaut  réduction par utilisation de la règle 38 ($@2)

    $@2  aller à l'état 18


État 15

   41 declaration_fonction: tVOID tID tLPAR liste_parametres_declaration . tRPAR bloc

    tRPAR  décalage et aller à l'état 19


État 16

   57 parametre_declaration: tINT tID .

    $défaut  réduction par utilisation de la règle 57 (parametre_declaration)


État 17

   60 liste_parametres_declaration: parametre_declaration tCOMMA . liste_parametres_declaration

    tINT   décalage et aller à l'état 11
    tVOID  décalage et aller à l'état 12

    parametre_declaration         aller à l'état 13
    liste_parametres_declaration  aller à l'état 20


État 18

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration $@2 . tRPAR $@3 bloc

    tRPAR  décalage et aller à l'état 21


État 19

   41 declaration_fonction: tVOID tID tLPAR liste_parametres_declaration tRPAR . bloc

    tIF      décalage et aller à l'état 22
    tWHILE   décalage et aller à l'état 23
    tPRINT   décalage et aller à l'état 24
    tRETURN  décalage et aller à l'état 25
    tINT     décalage et aller à l'état 26
    tVOID    décalage et aller à l'état 2
    tLBRACE  décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    my_return                aller à l'état 29
    my_if                    aller à l'état 30
    my_while                 aller à l'état 31
    print                    aller à l'état 32
    liste_id_aff             aller à l'état 33
    declaration_variable     aller à l'état 34
    initialisation_variable  aller à l'état 35
    affectation_variable     aller à l'état 36
    declaration_fonction     aller à l'état 37
    appel_fonction_void      aller à l'état 38
    instruction              aller à l'état 39
    bloc                     aller à l'état 40


État 20

   60 liste_parametres_declaration: parametre_declaration tCOMMA liste_parametres_declaration .

    $défaut  réduction par utilisation de la règle 60 (liste_parametres_declaration)


État 21

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration $@2 tRPAR . $@3 bloc

    $défaut  réduction par utilisation de la règle 39 ($@3)

    $@3  aller à l'état 41


État 22

   27 my_if: tIF . tLPAR liste_logical_operations tRPAR bloc

    tLPAR  décalage et aller à l'état 42


État 23

   29 my_while: tWHILE . tLPAR liste_logical_operations tRPAR bloc

    tLPAR  décalage et aller à l'état 43


État 24

   30 print: tPRINT . tLPAR liste_math_operations tRPAR tSEMI

    tLPAR  décalage et aller à l'état 44


État 25

   26 my_return: tRETURN . liste_math_operations tSEMI

    tNB  décalage et aller à l'état 45
    tID  décalage et aller à l'état 46

    operand                aller à l'état 47
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 49
    appel_fonction         aller à l'état 50


État 26

   33 declaration_variable: tINT . tID tSEMI
   34 initialisation_variable: tINT . tID tASSIGN liste_math_operations tSEMI
   40 declaration_fonction: tINT . tID tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc

    tID  décalage et aller à l'état 51


État 27

   56 bloc: tLBRACE . liste_instructions tRBRACE

    tIF      décalage et aller à l'état 22
    tWHILE   décalage et aller à l'état 23
    tPRINT   décalage et aller à l'état 24
    tRETURN  décalage et aller à l'état 25
    tINT     décalage et aller à l'état 26
    tVOID    décalage et aller à l'état 2
    tID      décalage et aller à l'état 28

    my_return                aller à l'état 29
    my_if                    aller à l'état 30
    my_while                 aller à l'état 31
    print                    aller à l'état 32
    liste_id_aff             aller à l'état 33
    declaration_variable     aller à l'état 34
    initialisation_variable  aller à l'état 35
    affectation_variable     aller à l'état 36
    declaration_fonction     aller à l'état 37
    appel_fonction_void      aller à l'état 38
    instruction              aller à l'état 52
    liste_instructions       aller à l'état 53


État 28

   31 liste_id_aff: tID .
   32             | tID . tCOMMA liste_id_aff
   43 appel_fonction_void: tID . tLPAR liste_parametres_appel tRPAR tSEMI

    tLPAR   décalage et aller à l'état 54
    tCOMMA  décalage et aller à l'état 55

    $défaut  réduction par utilisation de la règle 31 (liste_id_aff)


État 29

   52 instruction: my_return .

    $défaut  réduction par utilisation de la règle 52 (instruction)


État 30

   28 my_if: my_if . tELSE bloc
   49 instruction: my_if .

    tELSE  décalage et aller à l'état 56

    tELSE     [réduction par utilisation de la règle 49 (instruction)]
    $défaut  réduction par utilisation de la règle 49 (instruction)


État 31

   50 instruction: my_while .

    $défaut  réduction par utilisation de la règle 50 (instruction)


État 32

   51 instruction: print .

    $défaut  réduction par utilisation de la règle 51 (instruction)


État 33

   35 affectation_variable: liste_id_aff . tASSIGN liste_math_operations tSEMI

    tASSIGN  décalage et aller à l'état 57


État 34

   44 instruction: declaration_variable .

    $défaut  réduction par utilisation de la règle 44 (instruction)


État 35

   46 instruction: initialisation_variable .

    $défaut  réduction par utilisation de la règle 46 (instruction)


État 36

   45 instruction: affectation_variable .

    $défaut  réduction par utilisation de la règle 45 (instruction)


État 37

   47 instruction: declaration_fonction .

    $défaut  réduction par utilisation de la règle 47 (instruction)


État 38

   48 instruction: appel_fonction_void .

    $défaut  réduction par utilisation de la règle 48 (instruction)


État 39

   55 bloc: instruction .

    $défaut  réduction par utilisation de la règle 55 (bloc)


État 40

   41 declaration_fonction: tVOID tID tLPAR liste_parametres_declaration tRPAR bloc .

    $défaut  réduction par utilisation de la règle 41 (declaration_fonction)


État 41

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration $@2 tRPAR $@3 . bloc

    tIF      décalage et aller à l'état 22
    tWHILE   décalage et aller à l'état 23
    tPRINT   décalage et aller à l'état 24
    tRETURN  décalage et aller à l'état 25
    tINT     décalage et aller à l'état 26
    tVOID    décalage et aller à l'état 2
    tLBRACE  décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    my_return                aller à l'état 29
    my_if                    aller à l'état 30
    my_while                 aller à l'état 31
    print                    aller à l'état 32
    liste_id_aff             aller à l'état 33
    declaration_variable     aller à l'état 34
    initialisation_variable  aller à l'état 35
    affectation_variable     aller à l'état 36
    declaration_fonction     aller à l'état 37
    appel_fonction_void      aller à l'état 38
    instruction              aller à l'état 39
    bloc                     aller à l'état 58


État 42

   27 my_if: tIF tLPAR . liste_logical_operations tRPAR bloc

    tNOT  décalage et aller à l'état 59
    tNB   décalage et aller à l'état 45
    tID   décalage et aller à l'état 46

    operand                   aller à l'état 47
    logical_operation         aller à l'état 60
    liste_logical_operations  aller à l'état 61
    math_operation            aller à l'état 48
    liste_math_operations     aller à l'état 62
    appel_fonction            aller à l'état 50


État 43

   29 my_while: tWHILE tLPAR . liste_logical_operations tRPAR bloc

    tNOT  décalage et aller à l'état 59
    tNB   décalage et aller à l'état 45
    tID   décalage et aller à l'état 46

    operand                   aller à l'état 47
    logical_operation         aller à l'état 60
    liste_logical_operations  aller à l'état 63
    math_operation            aller à l'état 48
    liste_math_operations     aller à l'état 62
    appel_fonction            aller à l'état 50


État 44

   30 print: tPRINT tLPAR . liste_math_operations tRPAR tSEMI

    tNB  décalage et aller à l'état 45
    tID  décalage et aller à l'état 46

    operand                aller à l'état 47
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 64
    appel_fonction         aller à l'état 50


État 45

    1 operand: tNB .

    $défaut  réduction par utilisation de la règle 1 (operand)


État 46

    3 operand: tID .
   42 appel_fonction: tID . tLPAR liste_parametres_appel tRPAR

    tLPAR  décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 3 (operand)


État 47

   21 math_operation: operand . math_operator $@1 operand
   23 liste_math_operations: operand .

    tADD  décalage et aller à l'état 66
    tSUB  décalage et aller à l'état 67
    tMUL  décalage et aller à l'état 68
    tDIV  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 23 (liste_math_operations)

    math_operator  aller à l'état 70


État 48

    2 operand: math_operation .
   24 liste_math_operations: math_operation .
   25                      | math_operation . math_operator liste_math_operations

    tADD  décalage et aller à l'état 66
    tSUB  décalage et aller à l'état 67
    tMUL  décalage et aller à l'état 68
    tDIV  décalage et aller à l'état 69

    tADD      [réduction par utilisation de la règle 2 (operand)]
    tSUB      [réduction par utilisation de la règle 2 (operand)]
    tMUL      [réduction par utilisation de la règle 2 (operand)]
    tDIV      [réduction par utilisation de la règle 2 (operand)]
    tLT       réduction par utilisation de la règle 2 (operand)
    tLT       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tGT       réduction par utilisation de la règle 2 (operand)
    tGT       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tNE       réduction par utilisation de la règle 2 (operand)
    tNE       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tEQ       réduction par utilisation de la règle 2 (operand)
    tEQ       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tGE       réduction par utilisation de la règle 2 (operand)
    tGE       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tLE       réduction par utilisation de la règle 2 (operand)
    tLE       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tAND      réduction par utilisation de la règle 2 (operand)
    tAND      [réduction par utilisation de la règle 24 (liste_math_operations)]
    tOR       réduction par utilisation de la règle 2 (operand)
    tOR       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tNOT      réduction par utilisation de la règle 2 (operand)
    tNOT      [réduction par utilisation de la règle 24 (liste_math_operations)]
    tRPAR     réduction par utilisation de la règle 2 (operand)
    tRPAR     [réduction par utilisation de la règle 24 (liste_math_operations)]
    tSEMI     réduction par utilisation de la règle 2 (operand)
    tSEMI     [réduction par utilisation de la règle 24 (liste_math_operations)]
    tNB       réduction par utilisation de la règle 2 (operand)
    tNB       [réduction par utilisation de la règle 24 (liste_math_operations)]
    tID       réduction par utilisation de la règle 2 (operand)
    tID       [réduction par utilisation de la règle 24 (liste_math_operations)]
    $défaut  réduction par utilisation de la règle 2 (operand)

    math_operator  aller à l'état 71


État 49

   26 my_return: tRETURN liste_math_operations . tSEMI

    tSEMI  décalage et aller à l'état 72


État 50

   22 math_operation: appel_fonction .

    $défaut  réduction par utilisation de la règle 22 (math_operation)


État 51

   33 declaration_variable: tINT tID . tSEMI
   34 initialisation_variable: tINT tID . tASSIGN liste_math_operations tSEMI
   40 declaration_fonction: tINT tID . tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc

    tASSIGN  décalage et aller à l'état 73
    tLPAR    décalage et aller à l'état 9
    tSEMI    décalage et aller à l'état 74


État 52

   53 liste_instructions: instruction .
   54                   | instruction . liste_instructions

    tIF      décalage et aller à l'état 22
    tWHILE   décalage et aller à l'état 23
    tPRINT   décalage et aller à l'état 24
    tRETURN  décalage et aller à l'état 25
    tINT     décalage et aller à l'état 26
    tVOID    décalage et aller à l'état 2
    tID      décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 53 (liste_instructions)

    my_return                aller à l'état 29
    my_if                    aller à l'état 30
    my_while                 aller à l'état 31
    print                    aller à l'état 32
    liste_id_aff             aller à l'état 33
    declaration_variable     aller à l'état 34
    initialisation_variable  aller à l'état 35
    affectation_variable     aller à l'état 36
    declaration_fonction     aller à l'état 37
    appel_fonction_void      aller à l'état 38
    instruction              aller à l'état 52
    liste_instructions       aller à l'état 75


État 53

   56 bloc: tLBRACE liste_instructions . tRBRACE

    tRBRACE  décalage et aller à l'état 76


État 54

   43 appel_fonction_void: tID tLPAR . liste_parametres_appel tRPAR tSEMI

    tINT   décalage et aller à l'état 77
    tVOID  décalage et aller à l'état 78
    tNB    décalage et aller à l'état 45
    tID    décalage et aller à l'état 46

    operand                 aller à l'état 79
    math_operation          aller à l'état 80
    appel_fonction          aller à l'état 50
    parametre_appel         aller à l'état 81
    liste_parametres_appel  aller à l'état 82


État 55

   32 liste_id_aff: tID tCOMMA . liste_id_aff

    tID  décalage et aller à l'état 83

    liste_id_aff  aller à l'état 84


État 56

   28 my_if: my_if tELSE . bloc

    tIF      décalage et aller à l'état 22
    tWHILE   décalage et aller à l'état 23
    tPRINT   décalage et aller à l'état 24
    tRETURN  décalage et aller à l'état 25
    tINT     décalage et aller à l'état 26
    tVOID    décalage et aller à l'état 2
    tLBRACE  décalage et aller à l'état 27
    tID      décalage et aller à l'état 28

    my_return                aller à l'état 29
    my_if                    aller à l'état 30
    my_while                 aller à l'état 31
    print                    aller à l'état 32
    liste_id_aff             aller à l'état 33
    declaration_variable     aller à l'état 34
    initialisation_variable  aller à l'état 35
    affectation_variable     aller à l'état 36
    declaration_fonction     aller à l'état 37
    appel_fonction_void      aller à l'état 38
    instruction              aller à l'état 39
    bloc                     aller à l'état 85


État 57

   35 affectation_variable: liste_id_aff tASSIGN . liste_math_operations tSEMI

    tNB  décalage et aller à l'état 45
    tID  décalage et aller à l'état 46

    operand                aller à l'état 47
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 86
    appel_fonction         aller à l'état 50


État 58

   40 declaration_fonction: tINT tID tLPAR liste_parametres_declaration $@2 tRPAR $@3 bloc .

    $défaut  réduction par utilisation de la règle 40 (declaration_fonction)


État 59

   13 logical_operation: tNOT . logical_operation

    tNOT  décalage et aller à l'état 59
    tNB   décalage et aller à l'état 45
    tID   décalage et aller à l'état 46

    operand                aller à l'état 47
    logical_operation      aller à l'état 87
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 62
    appel_fonction         aller à l'état 50


État 60

   14 liste_logical_operations: logical_operation .
   15                         | logical_operation . liste_logical_operations

    tNOT  décalage et aller à l'état 59
    tNB   décalage et aller à l'état 45
    tID   décalage et aller à l'état 46

    $défaut  réduction par utilisation de la règle 14 (liste_logical_operations)

    operand                   aller à l'état 47
    logical_operation         aller à l'état 60
    liste_logical_operations  aller à l'état 88
    math_operation            aller à l'état 48
    liste_math_operations     aller à l'état 62
    appel_fonction            aller à l'état 50


État 61

   27 my_if: tIF tLPAR liste_logical_operations . tRPAR bloc

    tRPAR  décalage et aller à l'état 89


État 62

   12 logical_operation: liste_math_operations . logical_operator liste_math_operations

    tLT   décalage et aller à l'état 90
    tGT   décalage et aller à l'état 91
    tNE   décalage et aller à l'état 92
    tEQ   décalage et aller à l'état 93
    tGE   décalage et aller à l'état 94
    tLE   décalage et aller à l'état 95
    tAND  décalage et aller à l'état 96
    tOR   décalage et aller à l'état 97

    logical_operator  aller à l'état 98


État 63

   29 my_while: tWHILE tLPAR liste_logical_operations . tRPAR bloc

    tRPAR  décalage et aller à l'état 99


État 64

   30 print: tPRINT tLPAR liste_math_operations . tRPAR tSEMI

    tRPAR  décalage et aller à l'état 100


État 65

   42 appel_fonction: tID tLPAR . liste_parametres_appel tRPAR

    tINT   décalage et aller à l'état 77
    tVOID  décalage et aller à l'état 78
    tNB    décalage et aller à l'état 45
    tID    décalage et aller à l'état 46

    operand                 aller à l'état 79
    math_operation          aller à l'état 80
    appel_fonction          aller à l'état 50
    parametre_appel         aller à l'état 81
    liste_parametres_appel  aller à l'état 101


État 66

   16 math_operator: tADD .

    $défaut  réduction par utilisation de la règle 16 (math_operator)


État 67

   17 math_operator: tSUB .

    $défaut  réduction par utilisation de la règle 17 (math_operator)


État 68

   18 math_operator: tMUL .

    $défaut  réduction par utilisation de la règle 18 (math_operator)


État 69

   19 math_operator: tDIV .

    $défaut  réduction par utilisation de la règle 19 (math_operator)


État 70

   21 math_operation: operand math_operator . $@1 operand

    $défaut  réduction par utilisation de la règle 20 ($@1)

    $@1  aller à l'état 102


État 71

   25 liste_math_operations: math_operation math_operator . liste_math_operations

    tNB  décalage et aller à l'état 45
    tID  décalage et aller à l'état 46

    operand                aller à l'état 47
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 103
    appel_fonction         aller à l'état 50


État 72

   26 my_return: tRETURN liste_math_operations tSEMI .

    $défaut  réduction par utilisation de la règle 26 (my_return)


État 73

   34 initialisation_variable: tINT tID tASSIGN . liste_math_operations tSEMI

    tNB  décalage et aller à l'état 45
    tID  décalage et aller à l'état 46

    operand                aller à l'état 47
    math_operation         aller à l'état 48
    liste_math_operations  aller à l'état 104
    appel_fonction         aller à l'état 50


État 74
